--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </head>
     <body>
         <center>
-            <h1>In The Zone: Stay Focused And Boost Your Productivity</h1>
+            <h1>In The Zone<br>Stay Focused And Boost Your Productivity</h1>
 
             <div>
             In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity.
@@ -68,12 +68,13 @@
             </div>
 
             <h2>Screenshots</h2>
-            <img width="240" height="360" src="images/screen1.png">
-            <img width="240" height="360" src="images/screen2.png">
-            <img width="240" height="360" src="images/screen3.png">
-            <img width="240" height="360" src="images/screen4.png">
+            <img width="240" height="360" src="images/screen1.jpg">
+            <img width="240" height="360" src="images/screen2.jpg">
+            <img width="240" height="360" src="images/screen3.jpg">
+            <img width="240" height="360" src="images/screen4.jpg">
+            <img width="240" height="360" src="images/screen5.jpg">
 
-            <h2>One more thing!</h2>
+            <h2>One more thing...</h2>
             <div>
             The app will automatically take you out of the Zone when you use your phone to answer a call, lock the screen, switch to another app, ...
             </div>
