Added footer links.
Added Appstore, Twitter and Contact Us links.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="apple-itunes-app" content="app-id=921372070">
         <meta property="og:title" content="In The Zone: Stay Focused And Boost Your Productivity" />
         <meta property="og:description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity." />
         <title>In The Zone: Stay Focused And Boost Your Productivity</title>
@@ -12,13 +13,20 @@
                 padding: 80px 40px;
             }
             div {
-                font-size: 17pt;
+                font-size: 1.2em;
             }
             h2 {
             	margin-top: 40px;
             }
             img {
             	margin: 6px;
+            }
+            .links {
+                margin-top: 40px;
+                font-size: 0.8em;
+            }
+            .links span {
+                margin: 16px;
             }
         </style>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
@@ -77,6 +85,12 @@
             <h2>One more thing...</h2>
             <div>
             The app will automatically take you out of the Zone when you use your phone to answer a call, lock the screen, switch to another app, ...
+            </div>
+
+            <div class="links">
+                <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App store</a></span>
+                <span><a href="https://twitter.com/inthezone_app" target="_blank">Twitter</a></span>
+                <span><a href="mailto:inthezoneapp@gmail.com?Subject=Hello">Contact Us</a></span>
             </div>
         </center>
     </body>
