Added quotes and updated content.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             img {
             	margin: 6px;
             }
+            .quote {
+                margin-top: 40px;
+            }
             .links {
                 margin-top: 40px;
                 font-size: 0.8em;
@@ -50,11 +53,28 @@
             In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity.
             </div>
 
+            <div class="quote">
+            "Knowledge workers work best by getting into "flow", also known as being "in the zone", where they are fully concentrated on their work and fully tuned out of their environment [...]. This is when they get all of their productive work done.<br>
+            <a href="http://www.joelonsoftware.com/articles/fog0000000043.html">Joel Spolsky</a>
+            </div>
+
+            <div class="quote">
+            "When you have a long stretch when you aren't bothered, you can get in the zone. The zone is when you are most productive [...]. It's when you aren't interrupted to answer a question or look up something or send an email or answer an im."<br>
+            <a href="https://gettingreal.37signals.com/ch07_Alone_Time.php">37Signals</a>
+            </div>
+
             <h2>What is the Zone?</h2>
             <div>
             The Zone is the state where you are completely focused and fully productive.<br>
-            It takes time to get there, but the slightest distraction can take you out of it.
+            It takes time to get there, but the slightest distraction can knock you out of it and you have to start over.
             </div>
+
+            <h2>Screenshots</h2>
+            <img width="240" height="360" src="images/screen1.jpg">
+            <img width="240" height="360" src="images/screen2.jpg">
+            <img width="240" height="360" src="images/screen3.jpg">
+            <img width="240" height="360" src="images/screen4.jpg">
+            <img width="240" height="360" src="images/screen5.jpg">
 
             <h2>When to use this app?</h2>
             <div>
@@ -72,19 +92,17 @@
             <div>
             The screen color will change according to your Zone level.<br>
             Red indicates that you are out of the Zone.<br>
-            Yellow indicates that you are in The Zone.
+            Yellow indicates that you are in The Zone.<br><br>
+            The timer indicates how much time you have been in the current Zone.<br><br>
+            The app will automatically transition out of the Zone when you use your phone to answer a call, lock the screen, switch to another app, ...
             </div>
 
-            <h2>Screenshots</h2>
-            <img width="240" height="360" src="images/screen1.jpg">
-            <img width="240" height="360" src="images/screen2.jpg">
-            <img width="240" height="360" src="images/screen3.jpg">
-            <img width="240" height="360" src="images/screen4.jpg">
-            <img width="240" height="360" src="images/screen5.jpg">
-
-            <h2>One more thing...</h2>
+            <h2>How does this app help?</h2>
             <div>
-            The app will automatically take you out of the Zone when you use your phone to answer a call, lock the screen, switch to another app, ...
+            The act of launching the app and starting to get in the zone is a commitment to work. It can prevent you from procrastinating and is a good motivator to actually start working and to keep distractions away.<br><br>
+            The timer can help you decide if it's a good time to take a pause because you've been in the Zone for a long period, or if it is better to continue working because you've just entered the Zone.<br><br>
+            Your colleagues will notice the color change from yellow to red. This is a great signal that helps them understand the impact of interruptions on your productivity.<br><br>
+            Statistics help you measure your daily productive time.
             </div>
 
             <div class="links">
