Added view port.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name=viewport content="width=device-width, initial-scale=1">
         <meta name="apple-itunes-app" content="app-id=921372070">
         <meta property="og:title" content="In The Zone: Stay Focused And Boost Your Productivity" />
         <meta property="og:description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity." />
