--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             }
             .links {
                 margin-top: 40px;
-                font-size: 0.8em;
+                font-size: 1em;
             }
             .links span {
                 margin: 16px;
@@ -108,7 +108,9 @@
 
             <div class="links">
                 <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App store</a></span>
+                <span>|</span>
                 <span><a href="https://twitter.com/inthezone_app" target="_blank">Twitter</a></span>
+                <span>|</span>
                 <span><a href="mailto:inthezoneapp@gmail.com?Subject=Hello">Contact Us</a></span>
             </div>
         </center>
