--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
                 margin: 16px;
             }
         </style>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
         
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -108,11 +107,18 @@
 
             <div class="links">
                 <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App store</a></span>
-                <span>|</span>
                 <span><a href="https://twitter.com/inthezone_app" target="_blank">Twitter</a></span>
-                <span>|</span>
                 <span><a href="mailto:inthezoneapp@gmail.com?Subject=Hello">Contact Us</a></span>
             </div>
+
+            <script>
+                (function() {
+                    var link = document.createElement('link');
+                    link.rel = "stylesheet";
+                    link.href = "//fonts.googleapis.com/css?family=Open+Sans:400italic,400,700";
+                    document.querySelector("head").appendChild(link);
+                })();
+            </script>
         </center>
     </body>
 </html>
