--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
 
             <div class="links">
                 <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App store</a></span>
+                <span>|</span>
                 <span><a href="https://twitter.com/inthezone_app" target="_blank">Twitter</a></span>
+                <span>|</span>
                 <span><a href="mailto:inthezoneapp@gmail.com?Subject=Hello">Contact Us</a></span>
             </div>
 
