--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
 
             <div class="quote">
-            "Knowledge workers work best by getting into "flow", also known as being "in the zone", where they are fully concentrated on their work and fully tuned out of their environment [...]. This is when they get all of their productive work done.<br>
+            "Knowledge workers work best by getting into "flow", also known as being "in the zone", where they are fully concentrated on their work and fully tuned out of their environment [...]. This is when they get all of their productive work done."<br>
             <a href="http://www.joelonsoftware.com/articles/fog0000000043.html">Joel Spolsky</a>
             </div>
 
@@ -66,12 +66,24 @@
             It takes time to get there, but the slightest distraction can knock you out of it and you have to start over.
             </div>
 
+            <div class="links">
+                <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App Store</a></span>
+                <span>|</span>
+                <span><a href="https://twitter.com/inthezone_app" target="_blank">Twitter</a></span>
+            </div>
+
             <h2>Screenshots</h2>
             <img width="240" height="360" src="images/screen1.jpg">
             <img width="240" height="360" src="images/screen2.jpg">
             <img width="240" height="360" src="images/screen3.jpg">
             <img width="240" height="360" src="images/screen4.jpg">
             <img width="240" height="360" src="images/screen5.jpg">
+
+            <div class="links">
+                <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App Store</a></span>
+                <span>|</span>
+                <span><a href="https://twitter.com/inthezone_app" target="_blank">Twitter</a></span>
+            </div>
 
             <h2>When to use this app?</h2>
             <div>
@@ -103,7 +115,7 @@
             </div>
 
             <div class="links">
-                <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App store</a></span>
+                <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App Store</a></span>
                 <span>|</span>
                 <span><a href="https://twitter.com/inthezone_app" target="_blank">Twitter</a></span>
                 <span>|</span>
