--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <html>
     <head>
+        <meta http-equiv="content-type" content="text/html;charset=UTF-8">
         <meta name=viewport content="width=device-width, initial-scale=1">
         <meta name="apple-itunes-app" content="app-id=921372070">
-        <meta property="og:title" content="In The Zone: Stay Focused And Boost Your Productivity" />
-        <meta property="og:description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity." />
+
         <title>In The Zone: Stay Focused And Boost Your Productivity</title>
+        <meta property="description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity." />
+
+        <!-- Twitter Card data -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@inthezone_app">
+        <meta name="twitter:title" content="Page Title">
+        <meta name="twitter:description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity.">
+        <meta name="twitter:creator" content="@inthezone_app">
+        <!-- Twitter summary card with large image must be at least 280x150px -->
+        <meta name="twitter:image:src" content="http://inthezoneapp.com/images/screen1.jpg">
+
+        <!-- Open Graph data -->
+        <meta property="og:title" content="In The Zone: Stay Focused And Boost Your Productivity" />
+        <meta property="og:type" content="article" />
+        <meta property="og:url" content="http://inthezoneapp.com/" />
+        <meta property="og:image" content="http://inthezoneapp.com/images/screen1.jpg" />
+        <meta property="og:description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity." />
+        <meta property="og:site_name" content="In The Zone" />
+
         <style>
             body {
                 font-family: "open sans", sans-serif;
