Improved Twitter metadata.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
         <meta property="description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity." />
 
         <!-- Twitter Card data -->
-        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:card" content="app">
         <meta name="twitter:site" content="@inthezone_app">
-        <meta name="twitter:title" content="Page Title">
+        <meta name="twitter:title" content="In The Zone: Stay Focused And Boost Your Productivity">
         <meta name="twitter:description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity.">
         <meta name="twitter:creator" content="@inthezone_app">
         <!-- Twitter summary card with large image must be at least 280x150px -->
         <meta name="twitter:image:src" content="http://inthezoneapp.com/images/screen1.jpg">
+        <meta name="twitter:app:name:iphone" content="In The Zone" />
+        <meta name="twitter:app:id:iphone" content="921372070">
 
         <!-- Open Graph data -->
         <meta property="og:title" content="In The Zone: Stay Focused And Boost Your Productivity" />
