Updated twitter and Facebook metadata

--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
         <meta name="twitter:description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity.">
         <meta name="twitter:creator" content="@inthezone_app">
         <!-- Twitter summary card with large image must be at least 280x150px -->
-        <meta name="twitter:image:src" content="http://inthezoneapp.com/images/screen1.jpg">
+        <meta name="twitter:image:src" content="http://inthezoneapp.com/images/icon.png">
         <meta name="twitter:app:name:iphone" content="In The Zone" />
         <meta name="twitter:app:id:iphone" content="921372070">
 
         <!-- Open Graph data -->
         <meta property="og:title" content="In The Zone: Stay Focused And Boost Your Productivity" />
-        <meta property="og:type" content="article" />
         <meta property="og:url" content="http://inthezoneapp.com/" />
-        <meta property="og:image" content="http://inthezoneapp.com/images/screen1.jpg" />
+        <meta property="og:image" content="http://inthezoneapp.com/images/icon.png" />
         <meta property="og:description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity." />
-        <meta property="og:site_name" content="In The Zone" />
 
         <style>
             body {
