Updated share image.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Open Graph data -->
         <meta property="og:title" content="In The Zone: Stay Focused And Boost Your Productivity" />
         <meta property="og:url" content="http://inthezoneapp.com/" />
-        <meta property="og:image" content="http://inthezoneapp.com/images/icon.png" />
+        <meta property="og:image" content="http://inthezoneapp.com/images/screen1.png" />
         <meta property="og:description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity." />
 
         <style>
