Updated Facebook metadata.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
         <meta name=viewport content="width=device-width, initial-scale=1">
         <meta name="apple-itunes-app" content="app-id=921372070">
 
-        <title>In The Zone: Stay Focused And Boost Your Productivity</title>
-        <meta property="description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity." />
-
         <!-- Twitter Card data -->
         <meta name="twitter:card" content="app">
         <meta name="twitter:site" content="@inthezone_app">
@@ -20,9 +17,12 @@
 
         <!-- Open Graph data -->
         <meta property="og:title" content="In The Zone: Stay Focused And Boost Your Productivity" />
-        <!--<meta property="og:description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity." />-->
+        <meta property="og:description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity." />
         <meta property="og:url" content="http://inthezoneapp.com/" />
         <meta property="og:image" content="http://inthezoneapp.com/images/icon.png" />
+
+        <title>In The Zone: Stay Focused And Boost Your Productivity</title>
+        <meta property="description" content="In The Zone is a minimalist app and a powerful tool that helps you stay focused and improve your productivity." />
 
         <style>
             body {
