--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             }
             .quote {
                 margin-top: 40px;
+                font-style: italic;
             }
             .links {
                 margin-top: 40px;
