Added sharing buttons.
Added sharing buttons generated using simplesharingbuttons.com.

--- a/index.html
+++ b/index.html
@@ -43,12 +43,20 @@
             	margin: 6px;
             }
             .quote {
+                font-size: 1.1em;
                 margin-top: 40px;
                 font-style: italic;
             }
             .links {
                 margin-top: 40px;
                 font-size: 0.9em;
+            }
+            .share-buttons{
+                list-style: none;
+            }
+
+            .share-buttons li{
+                display: inline;
             }
         </style>
         
@@ -93,6 +101,15 @@
                 <span><a href="https://twitter.com/inthezone_app" target="_blank">Twitter</a></span>
             </div>
 
+            <ul class="share-buttons">
+                <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Finthezoneapp.com&t=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Share on Facebook"><img src="images/Facebook.png"></a></li>
+                <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Finthezoneapp.com&text=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity:%20http%3A%2F%2Finthezoneapp.com&via=inthezone_app" target="_blank" title="Tweet"><img src="images/Twitter.png"></a></li>
+                <li><a href="https://plus.google.com/share?url=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on Google+"><img src="images/Google+.png"></a></li>
+                <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Submit to Reddit"><img src="images/Reddit.png"></a></li>
+                <li><a href="http://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&summary=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity.&source=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on LinkedIn"><img src="images/LinkedIn.png"></a></li>
+                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity.:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email"><img src="images/Email.png"></a></li>
+            </ul>
+
             <h2>Screenshots</h2>
             <img width="240" height="360" src="images/screen1.jpg">
             <img width="240" height="360" src="images/screen2.jpg">
@@ -105,6 +122,15 @@
                 <span>|</span>
                 <span><a href="https://twitter.com/inthezone_app" target="_blank">Twitter</a></span>
             </div>
+
+            <ul class="share-buttons">
+                <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Finthezoneapp.com&t=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Share on Facebook"><img src="images/Facebook.png"></a></li>
+                <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Finthezoneapp.com&text=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity:%20http%3A%2F%2Finthezoneapp.com&via=inthezone_app" target="_blank" title="Tweet"><img src="images/Twitter.png"></a></li>
+                <li><a href="https://plus.google.com/share?url=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on Google+"><img src="images/Google+.png"></a></li>
+                <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Submit to Reddit"><img src="images/Reddit.png"></a></li>
+                <li><a href="http://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&summary=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity.&source=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on LinkedIn"><img src="images/LinkedIn.png"></a></li>
+                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity.:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email"><img src="images/Email.png"></a></li>
+            </ul>
 
             <h2>When to use this app?</h2>
             <div>
@@ -142,6 +168,15 @@
                 <span>|</span>
                 <span><a href="mailto:inthezoneapp@gmail.com?Subject=Hello">Contact Us</a></span>
             </div>
+
+            <ul class="share-buttons">
+                <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Finthezoneapp.com&t=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Share on Facebook"><img src="images/Facebook.png"></a></li>
+                <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Finthezoneapp.com&text=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity:%20http%3A%2F%2Finthezoneapp.com&via=inthezone_app" target="_blank" title="Tweet"><img src="images/Twitter.png"></a></li>
+                <li><a href="https://plus.google.com/share?url=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on Google+"><img src="images/Google+.png"></a></li>
+                <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Submit to Reddit"><img src="images/Reddit.png"></a></li>
+                <li><a href="http://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&summary=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity.&source=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on LinkedIn"><img src="images/LinkedIn.png"></a></li>
+                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity.:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email"><img src="images/Email.png"></a></li>
+            </ul>
 
             <script>
                 (function() {
