Removed '.' from email sharing message.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Finthezoneapp.com&text=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity:%20http%3A%2F%2Finthezoneapp.com&via=inthezone_app" target="_blank" title="Tweet"><img src="images/Twitter.png"></a></li>
                 <li><a href="https://plus.google.com/share?url=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on Google+"><img src="images/Google+.png"></a></li>
                 <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Submit to Reddit"><img src="images/Reddit.png"></a></li>
-                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity.:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email"><img src="images/Email.png"></a></li>
+                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email"><img src="images/Email.png"></a></li>
             </ul>
 
             <h2>Screenshots</h2>
@@ -129,7 +129,7 @@
                 <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Finthezoneapp.com&text=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity:%20http%3A%2F%2Finthezoneapp.com&via=inthezone_app" target="_blank" title="Tweet"><img src="images/Twitter.png"></a></li>
                 <li><a href="https://plus.google.com/share?url=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on Google+"><img src="images/Google+.png"></a></li>
                 <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Submit to Reddit"><img src="images/Reddit.png"></a></li>
-                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity.:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email"><img src="images/Email.png"></a></li>
+                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email"><img src="images/Email.png"></a></li>
             </ul>
 
             <h2>When to use this app?</h2>
@@ -174,7 +174,7 @@
                 <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Finthezoneapp.com&text=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity:%20http%3A%2F%2Finthezoneapp.com&via=inthezone_app" target="_blank" title="Tweet"><img src="images/Twitter.png"></a></li>
                 <li><a href="https://plus.google.com/share?url=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on Google+"><img src="images/Google+.png"></a></li>
                 <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Submit to Reddit"><img src="images/Reddit.png"></a></li>
-                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity.:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email"><img src="images/Email.png"></a></li>
+                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email"><img src="images/Email.png"></a></li>
             </ul>
 
             <script>
