--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             h2 {
             	margin-top: 40px;
             }
-            img {
-            	margin: 6px;
+            .screenshot {
+            	margin: 12px;
             }
             .quote {
                 font-size: 1.1em;
@@ -112,11 +112,11 @@
             </ul>
 
             <h2>Screenshots</h2>
-            <img width="240" height="360" src="images/screen1.jpg">
-            <img width="240" height="360" src="images/screen2.jpg">
-            <img width="240" height="360" src="images/screen3.jpg">
-            <img width="240" height="360" src="images/screen4.jpg">
-            <img width="240" height="360" src="images/screen5.jpg">
+            <img width="240" height="360" src="images/screen1.jpg" class="screenshot">
+            <img width="240" height="360" src="images/screen2.jpg" class="screenshot">
+            <img width="240" height="360" src="images/screen3.jpg" class="screenshot">
+            <img width="240" height="360" src="images/screen4.jpg" class="screenshot">
+            <img width="240" height="360" src="images/screen5.jpg" class="screenshot">
 
             <div class="links">
                 <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App Store</a></span>
