--- a/index.html
+++ b/index.html
@@ -58,44 +58,25 @@
             }
             .screenshot {
             	margin: 12px;
-            	width: auto;
-            	height: auto;
-            	margin: 0;
-            	padding: 12;
             }
-            .screenshot-1 {
-				background:url(screen1.jpg);
-			}
-			.screenshot-2 {
-				background:url(screen2.jpg);
-			}
-			.screenshot-3 {
-				background:url(screen3.jpg);
-			}
-			.screenshot-4 {
-				background:url(screen4.jpg);
-			}
-			.screenshot-5 {
-				background:url(screen5.jpg);
-			}
-            @media only screen and (min--moz-device-pixel-ratio: 1.5),
+            @media only images/screen and (min--moz-device-pixel-ratio: 1.5),
 				(-o-min-device-pixel-ratio: 3/2),
 			    (-webkit-min-device-pixel-ratio: 1.5),
 			    (min-device-pixel-ratio: 1.5) {
 			 	.screenshot-1 {
-					background:url(screen1@2x.jpg);
+					content:url(images/screen1@2x.jpg);
 				}
 				.screenshot-2 {
-					background:url(screen2@2x.jpg);
+					content:url(images/screen2@2x.jpg);
 				}
 				.screenshot-3 {
-					background:url(screen3@2x.jpg);
+					content:url(images/screen3@2x.jpg);
 				}
 				.screenshot-4 {
-					background:url(screen4@2x.jpg);
+					content:url(images/screen4@2x.jpg);
 				}
 				.screenshot-5 {
-					background:url(screen5@2x.jpg);
+					content:url(images/screen5@2x.jpg);
 				}
 			}
         </style>
