--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
             </ul>
 
             <h2>Screenshots</h2>
-            <img width="240" height="360" src="images/screen1.jpg" class="screenshot">
-            <img width="240" height="360" src="images/screen2.jpg" class="screenshot">
-            <img width="240" height="360" src="images/screen3.jpg" class="screenshot">
-            <img width="240" height="360" src="images/screen4.jpg" class="screenshot">
-            <img width="240" height="360" src="images/screen5.jpg" class="screenshot">
+            <img width="240" height="360" src="images/screen1.jpg" class="screenshot screenshot-1">
+            <img width="240" height="360" src="images/screen2.jpg" class="screenshot screenshot-2">
+            <img width="240" height="360" src="images/screen3.jpg" class="screenshot screenshot-3">
+            <img width="240" height="360" src="images/screen4.jpg" class="screenshot screenshot-4">
+            <img width="240" height="360" src="images/screen5.jpg" class="screenshot screenshot-5">
 
             <div class="links">
                 <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App Store</a></span>
