--- a/index.html
+++ b/index.html
@@ -59,6 +59,21 @@
             .screenshot {
             	margin: 12px;
             }
+            .screenshot-1 {
+				content:url(images/screen1.jpg);
+			}
+			.screenshot-2 {
+				content:url(images/screen2.jpg);
+			}
+			.screenshot-3 {
+				content:url(images/screen3.jpg);
+			}
+			.screenshot-4 {
+				content:url(images/screen4.jpg);
+			}
+			.screenshot-5 {
+				content:url(images/screen5.jpg);
+			}
             @media only images/screen and (min--moz-device-pixel-ratio: 1.5),
 				(-o-min-device-pixel-ratio: 3/2),
 			    (-webkit-min-device-pixel-ratio: 1.5),
@@ -131,11 +146,11 @@
             </ul>
 
             <h2>Screenshots</h2>
-            <img width="240" height="360" src="images/screen1.jpg" class="screenshot screenshot-1">
-            <img width="240" height="360" src="images/screen2.jpg" class="screenshot screenshot-2">
-            <img width="240" height="360" src="images/screen3.jpg" class="screenshot screenshot-3">
-            <img width="240" height="360" src="images/screen4.jpg" class="screenshot screenshot-4">
-            <img width="240" height="360" src="images/screen5.jpg" class="screenshot screenshot-5">
+            <img width="240" height="360" class="screenshot screenshot-1">
+            <img width="240" height="360" class="screenshot screenshot-2">
+            <img width="240" height="360" class="screenshot screenshot-3">
+            <img width="240" height="360" class="screenshot screenshot-4">
+            <img width="240" height="360" class="screenshot screenshot-5">
 
             <div class="links">
                 <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App Store</a></span>
