--- a/index.html
+++ b/index.html
@@ -184,12 +184,12 @@
             Red indicates that you are out of the Zone.<br>
             Yellow indicates that you are in The Zone.<br><br>
             The timer indicates how much time you have been in the current Zone.<br><br>
-            The app will automatically transition out of the Zone when you use your phone to answer a call, lock the screen, switch to another app, ...
+            The app will automatically step out of the Zone when you use your phone to answer a call, lock the screen, switch to another app, ...
             </div>
 
             <h2>How does this app help?</h2>
             <div>
-            The act of launching the app and starting to get in the zone is a commitment to work. It can prevent you from procrastinating and is a good motivator to actually start working and to keep distractions away.<br><br>
+            Launching the app and starting to get in the zone is a commitment to work. It can prevent you from procrastinating and is a good motivator to actually start working and to keep distractions away.<br><br>
             The timer can help you decide if it's a good time to take a pause because you've been in the Zone for a long period, or if it is better to continue working because you've just entered the Zone.<br><br>
             Your colleagues will notice the color change from yellow to red. This is a great signal that helps them understand the impact of interruptions on your productivity.<br><br>
             Statistics help you measure your daily productive time.
