--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 display: inline;
             }
             .screenshot {
-            	margin: 12px;
+            	/*margin: 12px;*/
             }
             .screenshot-1 {
 				content:url(images/screen1.jpg);
