Added app store badge.

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
             }
             .quote {
                 font-size: 1.1em;
-                margin-top: 40px;
+                padding-top: 40px;
                 font-style: italic;
             }
+            .badge {
+            	padding-top: 40px;
+            }
             .links {
-                margin-top: 40px;
                 font-size: 0.9em;
             }
             .share-buttons{
@@ -131,10 +133,10 @@
             It takes time to get there, but the slightest distraction can knock you out of it and you have to start over.
             </div>
 
-            <div class="links">
-                <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App Store</a></span>
-                <span>|</span>
-                <span><a href="https://twitter.com/inthezone_app" target="_blank">Twitter</a></span>
+            <div class="badge">
+	            <a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">
+	            	<img width="135px" height="35px" src="images/App_Store_Badge.svg">
+	            </a>
             </div>
 
             <ul class="share-buttons">
@@ -152,10 +154,10 @@
             <img width="240" height="360" class="screenshot screenshot-4">
             <img width="240" height="360" class="screenshot screenshot-5">
 
-            <div class="links">
-                <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App Store</a></span>
-                <span>|</span>
-                <span><a href="https://twitter.com/inthezone_app" target="_blank">Twitter</a></span>
+            <div class="badge">
+	            <a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">
+	            	<img width="135px" height="35px" src="images/App_Store_Badge.svg">
+	            </a>
             </div>
 
             <ul class="share-buttons">
@@ -195,12 +197,10 @@
             Statistics help you measure your daily productive time.
             </div>
 
-            <div class="links">
-                <span><a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">App Store</a></span>
-                <span>|</span>
-                <span><a href="https://twitter.com/inthezone_app" target="_blank">Twitter</a></span>
-                <span>|</span>
-                <span><a href="mailto:inthezoneapp@gmail.com?Subject=Hello">Contact Us</a></span>
+            <div class="badge">
+	            <a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">
+	            	<img width="135px" height="35px" src="images/App_Store_Badge.svg">
+	            </a>
             </div>
 
             <ul class="share-buttons">
@@ -210,6 +210,12 @@
                 <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Submit to Reddit"><img src="images/Reddit.png"></a></li>
                 <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email"><img src="images/Email.png"></a></li>
             </ul>
+
+            <div class="links">
+                <span><a href="https://twitter.com/inthezone_app" target="_blank">@inthezone_app</a></span>
+                <span>|</span>
+                <span><a href="mailto:inthezoneapp@gmail.com?Subject=Hello">Contact Us</a></span>
+            </div>
 
             <script>
                 (function() {
