--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@
                 font-style: italic;
             }
             .badge {
-            	padding-top: 40px;
+            	margin-top: 40px;
+            	width: 135px;
+            	height: 40px;
+            	background: url('images/App_Store_Badge.png');
+    			background-image: url('images/App_Store_Badge.svg'), none;
+            }
+            .badge a {
+            	display: block;
+            	width: 100%;
+            	height: 100%;
             }
             .links {
                 font-size: 0.9em;
@@ -134,9 +143,7 @@
             </div>
 
             <div class="badge">
-	            <a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">
-	            	<img width="135px" height="40px" src="images/App_Store_Badge.svg">
-	            </a>
+	            <a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank"></a>
             </div>
 
             <ul class="share-buttons">
@@ -155,9 +162,7 @@
             <img width="240" height="360" class="screenshot screenshot-5">
 
             <div class="badge">
-	            <a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">
-	            	<img width="135px" height="40px" src="images/App_Store_Badge.svg">
-	            </a>
+	            <a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank"></a>
             </div>
 
             <ul class="share-buttons">
@@ -198,9 +203,7 @@
             </div>
 
             <div class="badge">
-	            <a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank">
-	            	<img width="135px" height="40px" src="images/App_Store_Badge.svg">
-	            </a>
+	            <a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank"></a>
             </div>
 
             <ul class="share-buttons">
