Corrected images display in IE.

--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
             </ul>
 
             <h2>Screenshots</h2>
-            <img width="240" height="360" class="screenshot screenshot-1">
-            <img width="240" height="360" class="screenshot screenshot-2">
-            <img width="240" height="360" class="screenshot screenshot-3">
-            <img width="240" height="360" class="screenshot screenshot-4">
-            <img width="240" height="360" class="screenshot screenshot-5">
+            <img width="240" height="360" src="images/screen1@2x.jpg">
+            <img width="240" height="360" src="images/screen2@2x.jpg">
+            <img width="240" height="360" src="images/screen3@2x.jpg">
+            <img width="240" height="360" src="images/screen4@2x.jpg">
+            <img width="240" height="360" src="images/screen5@2x.jpg">
 
             <div class="badge">
 	            <a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank"></a>
